--- a/css/main.css
+++ b/css/main.css
@@ -388,8 +388,8 @@ nav {
 
     .container-right {
         position: absolute;
-        right: 1em;
-        top: 1em;
+        right: 0;
+        top: 0;
         width: 45%;
         height: 100%;
 
@@ -397,7 +397,9 @@ nav {
             height: 100%;
         }
     }
-
 }
+
+
+
 
 
