--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,11 @@ body {
             font-family: 'Single Day';
             font-size: 1.6em;
         }
+
+        span#dayOfWeek {
+            font-family: 'Dosis';
+            font-size: 1.25em;
+        }
     }
 
     nav {
@@ -88,7 +93,10 @@ section {
     }
 
     .primary-cta {
-        background: var(--primary-color);
+        /*background: var(--primary-color);*/
+        background-image: linear-gradient(to right, #8f5e1f, #ac9974, #513c0b);
+        background-size: 400% 100%;
+        transition: all .5s ease-in-out;
         color: white;
         text-decoration: none;
         padding:.6em 1.3em;
@@ -96,6 +104,9 @@ section {
         border-radius: .5em;
         font-weight: bold;
         display: inline-block;
+    }
+    .primary-cta:hover {
+        background-position: 100% 0;
     }
 
     .watch-video-cta {
@@ -112,7 +123,11 @@ section {
 .hero-img {
     width: 40%;
     margin-top: 3em;
+    transition: transform .5s ease-in-out;
 }
+.hero-img:hover {
+    transform: rotate(-25deg);
+  } 
 
 section.features-section {
     background: rgb(125, 108, 80);
@@ -192,7 +207,10 @@ input, textarea {
 }
 
 input[type="submit"] {
-    background-color: var(--primary-color);
+    /*background-color: var(--primary-color);*/
+    background-image: linear-gradient(to right, #8f5e1f, #ac9974, #513c0b);
+    background-size: 400% 100%;
+    transition: all .5s ease-in-out;
     color: white;
     font-weight: bold;
     font-size: 1.3em;
@@ -204,10 +222,14 @@ input[type="submit"] {
     width: unset;
     cursor: pointer;
 }
+input[type="submit"]:hover {
+    background-position: 100% 0;
+}
 
 iframe {
     width: 100%;
     height: 300px;
+    border-radius: 1%;
 }
 
 nav.menu-btn {
@@ -339,6 +361,10 @@ nav {
 
     .hero-cta {
         display: flex;
+
+        img {
+            width: 13%;
+        }
     }
     
     .primary-cta {
@@ -364,9 +390,10 @@ nav {
         img {
             display:block;
             position: absolute;
-            right: 0;
+            right: 1%;
             width: 350px;
             bottom: -2em;
+            border-radius: 15px 50px 20px;
         }
     }
 
@@ -386,12 +413,12 @@ nav {
         }
     }
 
-    .container-right {
+    .contact-right {
         position: absolute;
-        right: 0;
-        top: 0;
+        right: 4%;
+        top: 3%;
         width: 45%;
-        height: 100%;
+        height: 90%;
 
         iframe {
             height: 100%;
